--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+a {
+  text-decoration: none !important;
+}
+.footerEl {
+  color: 'green' !important;
+}
+.activeFooterEl {
+  color: 'black';
+}
