--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,28 @@ a {
 .activeFooterEl {
   color: 'black';
 }
+.ck.ck-reset {
+  width: 500px !important;
+  margin: 20px 0 !important;
+}
+
+@media only screen and (max-width: 667px) {
+  .ck.ck-reset {
+    width: 280px !important;
+  }
+}
+@media only screen and (min-width: 740px) and (max-width: 800px) {
+  .ck.ck-reset {
+    width: 300px !important;
+  }
+}
+@media only screen and (min-width: 810px) and (max-width: 915px) {
+  .ck.ck-reset {
+    width: 420px !important;
+  }
+}
+@media only screen and (min-width: 916px) and (max-width: 1180px) {
+  .ck.ck-reset {
+    width: 450px !important;
+  }
+}
