added all custom fields into collection items

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,21 @@ a {
   width: 500px !important;
   margin: 20px 0 !important;
 }
+.collection_description::-webkit-scrollbar {
+  width: 10px;
+}
+.collection_description::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+.collection_description::-webkit-scrollbar-thumb {
+  background-color: grey;
+  box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.5);
+  border-radius: 40px;
+}
+.collection_description {
+  scrollbar-width: thin;
+  scrollbar-color: #d4aa70 #e4e4e4;
+}
 
 @media only screen and (max-width: 667px) {
   .ck.ck-reset {
